WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72020
Web Inspector: [chromium] list dedicated workers in case inspector opened post-worker creation.
https://bugs.webkit.org/show_bug.cgi?id=72020
Summary
Web Inspector: [chromium] list dedicated workers in case inspector opened pos...
Pavel Feldman
Reported
2011-11-10 06:11:45 PST
Otherwise, I think there are no workers listed!
Attachments
Patch
(12.33 KB, patch)
2011-11-11 02:22 PST
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
Patch
(8.61 KB, patch)
2011-11-11 10:51 PST
,
Jonathan Backer
no flags
Details
Formatted Diff
Diff
Patch with failing assertion removed
(12.45 KB, patch)
2011-11-14 00:54 PST
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2011-11-11 02:22:30 PST
Created
attachment 114656
[details]
Patch
Yury Semikhatsky
Comment 2
2011-11-11 05:20:54 PST
Committed
r99953
: <
http://trac.webkit.org/changeset/99953
>
Jonathan Backer
Comment 3
2011-11-11 10:51:47 PST
Created
attachment 114730
[details]
Patch
WebKit Review Bot
Comment 4
2011-11-11 10:54:45 PST
Please wait for approval from
fishd@chromium.org
before submitting because this patch contains changes to the Chromium public API.
Jonathan Backer
Comment 5
2011-11-11 10:55:47 PST
Comment on
attachment 114730
[details]
Patch Ooops. Accidentally attached a patch to the wrong bug.
Ojan Vafai
Comment 6
2011-11-11 15:12:15 PST
This was rolled out in
http://trac.webkit.org/changeset/100028
.
Yury Semikhatsky
Comment 7
2011-11-14 00:54:13 PST
Created
attachment 114896
[details]
Patch with failing assertion removed Removed the ASSERT. Worker context termination notification may arrive after the page along with InspectorWorkerAgent has already been destroyed.
Pavel Feldman
Comment 8
2011-11-14 00:56:37 PST
Comment on
attachment 114896
[details]
Patch with failing assertion removed View in context:
https://bugs.webkit.org/attachment.cgi?id=114896&action=review
> LayoutTests/platform/chromium/test_expectations.txt:3887 > +BUGWK72133 MAC : http/tests/inspector-enabled/dedicated-workers-list.html = PASS CRASH TIMEOUT
SKIP ?
WebKit Review Bot
Comment 9
2011-11-14 00:57:26 PST
Attachment 114896
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/http..." exit_code: 1 Last 3072 characters of output: ctations] [2] LayoutTests/platform/chromium/test_expectations.txt:3855: Path does not exist. svg/zoom/page/relative-sized-document-scrollbars.svg [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3857: Path does not exist. storage/indexeddb/key-type-array.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3859: Path does not exist. storage/indexeddb/factory-deletedatabase-interactions.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3861: Path does not exist. fast/js/array-functions-non-arrays.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3862: Path does not exist. fast/js/eval-cross-window.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3863: Path does not exist. fast/js/regexp-caching.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3864: Path does not exist. fast/js/toString-overrides.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3865: Path does not exist. fast/js/toString-recursion.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3866: Path does not exist. http/tests/security/xss-eval.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3868: Path does not exist. fast/dom/javascript-url-exception-isolation.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3869: Path does not exist. fast/borders/inline-mask-overlay-image-outset-vertical-rl.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3871: Path does not exist. fast/dom/rtl-scroll-to-leftmost-and-resize.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3873: Path does not exist. http/tests/inspector/resource-tree/appcache-iframe-manifests.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3875: Path does not exist. accessibility/adjacent-continuations-cause-assertion-failure.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3877: Path does not exist. inspector/debugger/script-formatter.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3880: Path does not exist. fast/js/mozilla/strict/15.4.5.1.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3882: Path does not exist. fast/canvas/canvas-transforms-fillRect-shadow.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3884: Path does not exist. media/track/tracklist-is-reachable.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3886: Path does not exist. http/tests/inspector-enabled/dedicated-workers-list.html [test/expectations] [2] LayoutTests/platform/chromium/test_expectations.txt:3887: Path does not exist. http/tests/inspector-enabled/dedicated-workers-list.html [test/expectations] [2] Total errors found: 2136 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yury Semikhatsky
Comment 10
2011-11-14 01:06:31 PST
(In reply to
comment #8
)
> (From update of
attachment 114896
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=114896&action=review
> > > LayoutTests/platform/chromium/test_expectations.txt:3887 > > +BUGWK72133 MAC : http/tests/inspector-enabled/dedicated-workers-list.html = PASS CRASH TIMEOUT > > SKIP ?
Done.
Yury Semikhatsky
Comment 11
2011-11-14 01:16:32 PST
Committed
r100110
: <
http://trac.webkit.org/changeset/100110
>
Tony Gentilcore
Comment 12
2011-11-14 02:23:48 PST
Reopening as this was rolled out in
https://bugs.webkit.org/show_bug.cgi?id=72163
Yury Semikhatsky
Comment 13
2011-11-14 03:49:29 PST
(In reply to
comment #12
)
> Reopening as this was rolled out in
https://bugs.webkit.org/show_bug.cgi?id=72163
The problem was fixed after rolling out and committed again, so there was no mistake in marking the bug as resolved.
Tony Gentilcore
Comment 14
2011-11-14 04:01:40 PST
(In reply to
comment #13
)
> (In reply to
comment #12
) > > Reopening as this was rolled out in
https://bugs.webkit.org/show_bug.cgi?id=72163
> > The problem was fixed after rolling out and committed again, so there was no mistake in marking the bug as resolved.
Oops, sorry. Thanks.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug