Web Inspector: [chromium] list dedicated workers in case inspector opened post-worker creation. https://bugs.webkit.org/show_bug.cgi?id=72020

Source/WebCore:

Collect information about dedicated workers even when inspector is closed. This
way we can list all dedicated workers if the front-end opens later.

Reviewed by Pavel Feldman.

Test: http/tests/inspector-enabled/dedicated-workers-list.html

* inspector/InspectorInstrumentation.h:
(WebCore::InspectorInstrumentation::didStartWorkerContext):
* inspector/InspectorWorkerAgent.cpp:
(WebCore::InspectorWorkerAgent::InspectorWorkerAgent):
(WebCore::InspectorWorkerAgent::~InspectorWorkerAgent):
(WebCore::InspectorWorkerAgent::setFrontend):
(WebCore::InspectorWorkerAgent::restore):
(WebCore::InspectorWorkerAgent::clearFrontend):
(WebCore::InspectorWorkerAgent::setWorkerInspectionEnabled):
(WebCore::InspectorWorkerAgent::didStartWorkerContext):
(WebCore::InspectorWorkerAgent::workerContextTerminated):
(WebCore::InspectorWorkerAgent::createWorkerFrontendChannelsForExistingWorkers):
(WebCore::InspectorWorkerAgent::destroyWorkerFrontendChannels):
(WebCore::InspectorWorkerAgent::createWorkerFrontendChannel):
* inspector/InspectorWorkerAgent.h:

LayoutTests:

Reviewed by Pavel Feldman.

* http/tests/inspector-enabled/dedicated-workers-list-expected.txt: Added.
* http/tests/inspector-enabled/dedicated-workers-list.html: Added.
* http/tests/inspector-enabled/resources/dedicated-worker.js: Added.
(doWork):

Canonical link: https://commits.webkit.org/88513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99953 268f45cc-cd09-0410-ab3c-d52691b4dbfc