Source/WebCore/inspector/InspectorWorkerAgent.h
@@ -69,6 +69,9 @@ public:
 
 private:
     InspectorWorkerAgent(InstrumentingAgents*, InspectorState*);
+    void createWorkerFrontendChannelsForExistingWorkers();
+    void createWorkerFrontendChannel(WorkerContextProxy*, const String& url);
+    void destroyWorkerFrontendChannels();
 
     InstrumentingAgents* m_instrumentingAgents;
     InspectorFrontend* m_inspectorFrontend;
@@ -77,6 +80,8 @@ private:
     class WorkerFrontendChannel;
     typedef HashMap<int, WorkerFrontendChannel*> WorkerChannels;
     WorkerChannels m_idToChannel;
+    typedef HashMap<WorkerContextProxy*, String> DedicatedWorkers;
+    DedicatedWorkers m_dedicatedWorkers;
 };
 
 } // namespace WebCore
