LayoutTests/http/tests/inspector-enabled/resources/dedicated-worker.js
@@ -1,0 +1,7 @@
+var workerId = location.search.substring(4);
+postMessage("Worker " + workerId + " started.");
+doWork();
+setInterval(doWork, 1000);
+function doWork() {
+}
+
